fixed issue with toolbar not showing in chrome

--- a/frontend/src/components/toolbar-component/toolbar-component.css
+++ b/frontend/src/components/toolbar-component/toolbar-component.css
@@ -15,6 +15,7 @@ ion-nav {
   position: fixed;
   height: min-content;
   z-index: 2;
+  overflow: visible;
 }
 
 .menu_box_closed {
